# arch-com

./: .gitignore  .mcp.json  AGENTS.md  CLA.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  arch_paper v2.tex  arch_paper.tex  arch_paper0430.tex  arch_paper0430_acm.aux  arch_paper0430_acm.out  arch_paper0430_acm.tex  arch_paper0502.aux  arch_paper0502.out  arch_paper0502.tex  arch_paper1.tex  critique2.txt  rust-toolchain.toml  thread.linkedin.md  work_dir.txt
.codex/: config.toml  hooks.json
.githooks/: pre-commit  pre-push
doc/: ARCH_HDL_Specification.docx  ARCH_HDL_Specification.md  Arch_AI_Reference_Card.docx  Arch_AI_Reference_Card.md  Arch_Benchmark_Report.md  COMPILER_STATUS.md  ONBOARDING_CHEATSHEET.md  RealBench_Benchmark.md  VerilogEval_Benchmark.md  arch.ebnf  arch_coding_reflection_2026-04-12.md  arch_regression_runner.md  arch_sim_cocotb.md  arch_vs_other_hdls.md  axi_dma_case_study.md  bus_spec_section.md  codex_mcp_restart_handoff_2026-04-12.md  cvdp_benchmark_log.md  cvdp_learnings.md  cvdp_resume_handoff_2026-04-05.md  gpu_cosim_plan.md  l1d_case_study.md  multdiv_multicycle_vs_fsm.md  nic400_interconnect_spec.md  paper_review.md  paper_review_2.md  paper_review_3.md  phase_d_cache_mshr_analysis.md  plan_arch_coverage.md  plan_arch_fmt.md  plan_arch_learning_system.md  plan_arch_lsp.md  plan_arch_sim_coverage.md  plan_arch_sim_profile.md  plan_arch_sim_reset_analysis.md  plan_assume_formal_constraints.md  plan_bus_unification.md  plan_cam_remaining.md  plan_compiler_refactor.md  plan_credit_channel.md  (+41 more)
examples/: TestPkg.arch  arbiter_custom_hook.arch  arbiter_custom_hook.sv  arbiter_latency2.arch  arbiter_latency2.sv  arbiter_tb.cpp  async_fifo.arch  async_fifo.sv  async_fifo_tb.cpp  bus_arbiter.arch  bus_arbiter.sv  bus_basic.arch  cdc_inst_safe.arch  cdc_inst_safe.sv  cdc_inst_violation.arch  clk_div_counter.arch  clk_divider.arch  clk_divider.sv  clk_out_test.arch  clk_out_test.sv  clkgate_and.arch  clkgate_and.sv  counter_tb.cpp  (+111 more)
(+2525 files in other folders)
