[package]
name = "arch"
version = "0.1.0"
edition = "2021"
description = "Compiler for the ARCH hardware description language"
license = "Apache-2.0"
repository = "https://github.com/arch-hdl-lang/arch"
keywords = ["hdl", "hardware", "compiler", "systemverilog", "eda"]
categories = ["compilers", "hardware-support"]

[[bin]]
name = "arch"
path = "src/main.rs"

[dependencies]
logos = "0.14"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
insta = "1"
