[package]
name = "arch"
version = "0.48.0"
edition = "2021"
description = "Compiler for the ARCH hardware description language"
license = "LGPL-3.0-or-later"
repository = "https://github.com/arch-hdl-lang/arch"
keywords = ["hdl", "hardware", "compiler", "systemverilog", "eda"]
categories = ["compilers", "hardware-support"]

[[bin]]
name = "arch"
path = "src/main.rs"

[dependencies]
logos = "0.14"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
