[package]
name = "arch"
version = "0.70.6"
edition = "2021"
description = "Compiler for the ARCH hardware description language"
license = "LGPL-3.0-or-later"
repository = "https://github.com/arch-hdl-lang/arch-com"
keywords = ["hdl", "hardware", "compiler", "systemverilog", "eda"]
categories = ["compilers", "hardware-support"]

[[bin]]
name = "arch"
path = "src/main.rs"

[dependencies]
logos = "0.14"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
insta = "1"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
